# room-model

./: README.md  my-project.cabal  room-model-example.txt
.stack-work/install/3d04ff67/flag-cache/: aeson-1.0.2.1-IiYeWJWWMfjD3HYPhhVild  aeson-pretty-0.8.2-H6AF9Sa38dQExqtNC6Pi83  ansi-terminal-0.6.2.3-Az560Cs0ObY6ZODYjxtBiR  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  async-2.1.1-4n6HEMPJR2eJK0JpvCfuPK  attoparsec-0.13.1.0-KwckfZOQnr04d9ofoJ9Hh4  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.2-3Rp79AeCFKJ4blfnCflOJE  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  blaze-builder-0.4.0.2-CGB8BvrFgghHy5bLy0SFOg  blaze-html-0.8.1.3-4x5sR7CihaZBuBa398ibiy  blaze-markup-0.7.1.1-7tIWNv8iALFJhJ4kVxNmNT  blaze-svg-0.3.6.1-1ShFTZ3k1YAGqqn0ZvA87r  byteorder-1.0.4-9NlNHkBVdo7F1prFVKrkcH  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  case-insensitive-1.2.0.8-336s2tfPdxOEPgnLH8r0bz  cmdargs-0.10.17-IWa8ygdJhnJBShkQXN8V9I  conduit-1.2.9-KyEH1gT2SFlFXLffDx2XOT  conduit-extra-1.1.15-FCYSHf9s9bQAuDEix1LWPK  cookie-0.4.2.1-K68NuFIZ07nEstxwB6c3aL  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  dlist-0.8.0.2-6Wnps4GD7EFnRucVzXIFD  easy-file-0.2.1-5ig8rCGsBnD1LYczMQvq1o  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fast-logger-2.4.10-ISntn3wtmf3KaztHeg0TP4  hashable-1.2.6.0-3EXxoqeEgbfAKr6aGkye6x  hex-0.1.2-HUUA94TVE748JTmJozIoTC  http-date-0.0.6.1-4Va6kCv9oOOJnnE57g7tU  http-types-0.9.1-5rMGX8lemrMDaQeDulF4OF  http2-1.6.3-82OptI2A5ESI6RhudSAT6  integer-logarithms-1.0.1-IEHCuEd5sG4JjSjlx7m5JF  (+37 more)
html/: page.html
src/: Logic.hs  Main.hs
